--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": ">2.1.3"
+        "php": ">=8.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "1.5.*"
